--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-jwt": "^3.6.0",
     "koa-router": "^8.0.8",
     "koa-static2": "^0.1.8",
+    "mysql2": "^2.1.0",
     "promise-mysql": "^4.1.3",
     "sequelize": "^5.21.6"
   },
